tdf#156505 sw: reset view options after export as graphic

When creating an export graphic,
the view options are changed to hide hidden stuff,
not show the formatting marks etc.

However, the user's view settings were not being restored
after the export was done.

Change-Id: I3e236e5ef47eddca487621c92ec639f7bac073de
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175185
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>